<resources>
    <string name="app_name">Glorio</string>
    <integer name="com_vk_sdk_AppId">5891500</integer>
    <string name="title_activity_general">GeneralActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="indicator_posts">Posts :</string>
    <string name="indicator_evarage_like">Likes per posts :</string>
    <string name="indicator_likes_on_sub">Likes per subscribers :</string>
    <string name="indicator_average_age">Average age :</string>
    <string name="indicator_sex">Sex :</string>

    <string name="categoryDialogWrite">Category_name</string>
    <string name="cancel">Cencel</string>
    <string name="confirm">OK</string>
    <string name="add">Add</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_category">Categories</string>

    <string name="confirm_warning">A you shure ?</string>
    <string name="title_activity_public">Publics</string>

</resources>
