<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/confirmDialogWrite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:text="@string/confirm_warning"
        android:textAppearance="?android:attr/textAppearanceLarge">
    </TextView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <Button
            android:id="@+id/confirmDialogBtnCencel"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:background="@drawable/button_selector"
            android:layout_gravity="center"
            android:layout_marginRight="70dp"
            android:text="@string/cancel">
        </Button>

        <Button
            android:id="@+id/confirmDialogBtnYes"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:background="@drawable/button_selector"
            android:layout_gravity="center"
            android:layout_marginLeft="70dp"
            android:text="@string/confirm">
        </Button>
    </FrameLayout>
</LinearLayout>
